tests/invalid/ref_to_implicit_pred.m
:- module ref_to_implicit_pred.
:- interface.

:- pred test is det.

:- implementation.

test :- fail.
   p(test,
   p(test,
   test)).
